# habuild-knowledge-base

./: .env.example  .gitignore  Procfile  README.md  employees.csv  pyproject.toml  render.yaml
.claude/: settings.json
backend/: .env.example  dependencies.py  main.py  models.py  observability.py  requirements.txt
backend/middleware/: request_logging.py
backend/routers/: auth.py  chat.py  documents.py  employees.py  policies.py
backend/services/: db.py  embeddings.py  llm.py  rag.py  tools.py
evals/: README.md  conftest.py  test_answer_quality.py  test_chunking.py  test_retrieval.py
evals/fixtures/: golden_qa.json  sample_policy.txt
evals/utils/: judge.py  metrics.py
frontend/: .env.example  app.py  requirements.txt
frontend-next/: next.config.mjs  package.json  railway.toml  tailwind.config.ts  tsconfig.tsbuildinfo
frontend-next/app/: globals.css  layout.tsx  page.tsx
frontend-next/components/: ErrorBoundary.tsx  admin-panel.tsx  complete-profile-view.tsx  documents-view.tsx  sidebar.tsx  sign-in-view.tsx
frontend-next/lib/: api.ts
frontend/pages/: 1_admin.py  2_documents.py
frontend/utils/: api.py  auth.py  styles.py
scripts/: bulk_ingest.py
supabase/migrations/: 001_initial.sql  002_add_documents.sql  002_add_policies_documents.sql  003_merge_policies_into_documents.sql  004_add_employees_table.sql  004_normalize_gurugram.sql  005_update_chunks_vector_dim.sql
