[project]
name = "habuild-hr-assistant"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    # Backend
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "anthropic>=0.40.0",
    "voyageai>=0.3.0",
    "supabase>=2.9.0",
    "python-multipart>=0.0.12",
    "pydantic>=2.0.0",
    "pypdf2>=3.0.0",
    "python-docx>=1.1.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "tiktoken>=0.7.0",
    "python-dotenv>=1.0.0",
    # Frontend
    "streamlit>=1.40.0",
    "requests>=2.31.0",
]
