[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend", "frontend"]

[project]
name = "habuild-hr-assistant"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    # Backend
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "anthropic>=0.40.0",
    "voyageai>=0.3.0",
    "supabase>=2.9.0",
    "python-multipart>=0.0.12",
    "pydantic>=2.0.0",
    "pypdf2>=3.0.0",
    "python-docx>=1.1.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "tiktoken>=0.7.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    # Observability
    "structlog>=24.4.0",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "opentelemetry-instrumentation-httpx>=0.48b0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
